[tool.poetry]
name = "chat-analyzer"
version = "0.1.0"
description = ""
authors = ["gorbart <bartek.go3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.5.2"
pandas = "^1.5.3"
seaborn = "^0.12.2"
scikit-learn = "^1.2.1"
nltk = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
